--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,67 @@
 .Rhistory
 .RData
 .Ruserdata
+
+# jupyter notebooks
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+*.webarchive
+
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+*.RData
+
+# User-specific files
+.Ruserdata
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+### R.Bookdown Stack ###
+# R package: bookdown caching files
+/*_files/
+
+# End of https://www.toptal.com/developers/gitignore/api/r
+.Rproj.user
+
+*.DS_Store
+
+# directories and file formats that contain large data files
+*.bam
+fastq_data/
+bam_data/
+
+#export PATH="/usr/local/opt/python/libexec/bin:$PATH"
+
+#export PATH="/usr/local/opt/python/libexec/bin:$PATH"
